--- a/portfolio.html
+++ b/portfolio.html
@@ -14,187 +14,185 @@
     />
   </head>
   <body>
-    <div class="container">
-      <header>
-        <div class="container all-nav">
-          <nav class="main-nav">
-            <a href="/" class="logo">
-              <img src="./images/logo.svg" alt="Логотип компании"
-            /></a>
+    <header>
+      <div class="container all-nav">
+        <nav class="main-nav">
+          <a href="/" class="logo">
+            <img src="./images/logo.svg" alt="Логотип компании"
+          /></a>
 
-            <ul class="site-nav list">
-              <li class="item">
-                <a href="./index.html" class="link">Студия</a>
-              </li>
-              <li class="item">
-                <a href="./portfolio.html" class="link current">Портфолио</a>
-              </li>
-              <li class="item"><a href=" " class="link">Контакты</a></li>
-            </ul>
-          </nav>
-          <ul class="header-contacts list">
+          <ul class="site-nav list">
             <li class="item">
-              <a href="mailto:info@devstudio.com" class="link"
-                >info@devstudio.com</a
-              >
+              <a href="./index.html" class="link">Студия</a>
             </li>
             <li class="item">
-              <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+              <a href="./portfolio.html" class="link current">Портфолио</a>
+            </li>
+            <li class="item"><a href=" " class="link">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="header-contacts list">
+          <li class="item">
+            <a href="mailto:info@devstudio.com" class="link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="item">
+            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </div>
+    </header>
+    <main>
+      <section>
+        <div class="container buttons-list">
+          <ul class="buttons list">
+            <li>
+              <button type="button" class="button portfolio">Все</button>
+            </li>
+            <li>
+              <button type="button" class="button portfolio">Веб-сайты</button>
+            </li>
+            <li>
+              <button type="button" class="button portfolio">Приложения</button>
+            </li>
+            <li>
+              <button type="button" class="button portfolio">Дизайн</button>
+            </li>
+            <li>
+              <button type="button" class="button portfolio">Маркетинг</button>
             </li>
           </ul>
         </div>
-      </header>
-      <main>
-        <section>
-          <div class="container buttons-list">
-            <ul class="buttons list">
-              <li>
-                <button type="button" class="button portfolio">Все</button>
-              </li>
-              <li>
-                <button type="button" class="button portfolio">
-                  Веб-сайты
-                </button>
-              </li>
-              <li>
-                <button type="button" class="button portfolio">
-                  Приложения
-                </button>
-              </li>
-              <li>
-                <button type="button" class="button portfolio">Дизайн</button>
-              </li>
-              <li>
-                <button type="button" class="button portfolio">
-                  Маркетинг
-                </button>
-              </li>
-            </ul>
-          </div>
 
-          <h1 hidden>Портфолио</h1>
-          <div class="container">
-            <ul class="flex-container">
-              <li class="flex-elements">
-                <a href="" class="card"
-                  ><img src="./images/imgfirst1.jpg" alt="Технокряк"
-                /></a>
-                <div>
-                  <h2 class="title-card">Технокряк</h2>
-                  <p class="text-card">Веб-сайт</p>
-                </div>
-              </li>
-              <li class="flex-elements">
-                <a href="" class="card">
-                  <img
-                    src="./images/imgsecond-2.jpg"
-                    alt="Постер"
-                    width="370"
-                    height="294"
-                /></a>
-                <div>
-                  <h2 class="title-card">Постер New Orlean vs Golden Star</h2>
-                  <p class="text-card">Дизайн</p>
-                </div>
-              </li>
-              <li class="flex-elements">
-                <a href="" class="card"
-                  ><img
-                    src="./images/imgthird-2.jpg"
-                    alt="Ресторан"
-                    width="370"
-                    height="294"
-                /></a>
-                <div>
-                  <h2 class="title-card">Ресторан Seafood</h2>
-                  <p class="text-card">Приложение</p>
-                </div>
-              </li>
-              <li class="flex-elements">
-                <a href="" class="card"
-                  ><img
-                    src="./images/img(3)-2.jpg"
-                    alt="Проект Прайм"
-                    width="370"
-                    height="294"
-                /></a>
-                <div>
-                  <h2 class="title-card">Проект Prime</h2>
-                  <p class="text-card">Маркетинг</p>
-                </div>
-              </li>
-              <li class="flex-elements">
-                <a href="" class="card"
-                  ><img
-                    src="./images/img(4)-2.jpg"
-                    alt="Проект Бокс"
-                    width="370"
-                    height="294"
-                /></a>
-                <div>
-                  <h2 class="title-card">Проект Boxes</h2>
-                  <p class="text-card">Приложение</p>
-                </div>
-              </li>
-              <li class="flex-elements">
-                <a href="" class="card">
-                  <img
-                    src="./images/img(5)-2.jpg"
-                    alt="Вдохоновение"
-                    width="370"
-                    height="294"
-                /></a>
-                <div>
-                  <h2 class="title-card">Inspiration has no Borders</h2>
-                  <p class="text-card">Веб-сайт</p>
-                </div>
-              </li>
-              <li class="flex-elements">
-                <a href="" class="card">
-                  <img
-                    src="./images/img(6)-2.jpg"
-                    alt="Издание"
-                    width="370"
-                    height="294"
-                /></a>
-                <div>
-                  <h2 class="title-card">Издание Limited Edition</h2>
-                  <p class="text-card">Дизайн</p>
-                </div>
-              </li>
-              <li class="flex-elements">
-                <a href="" class="card">
-                  <img
-                    src="./images/img(7)-2.jpg"
-                    alt="Проект Лаб"
-                    width="370"
-                    height="294"
-                /></a>
-                <div>
-                  <h2 class="title-card">Проект LAB</h2>
-                  <p class="text-card">Маркетинг</p>
-                </div>
-              </li>
-              <li class="flex-elements">
-                <a href="" class="card">
-                  <img
-                    src="./images/img(8)-2.jpg"
-                    alt="Бизнес"
-                    width="370"
-                    height="294"
-                /></a>
-                <div>
-                  <h2 class="title-card">Growing Business</h2>
-                  <p class="text-card">Приложение</p>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </section>
-      </main>
+        <h1 hidden>Портфолио</h1>
+        <div class="container">
+          <ul class="flex-container list">
+            <li class="flex-elements">
+              <a href="" class="card"
+                ><img src="./images/imgfirst1.jpg" alt="Технокряк"
+              /></a>
+              <div class="flex">
+                <h2 class="title-card">Технокряк</h2>
+                <p class="text-card">Веб-сайт</p>
+              </div>
+            </li>
+            <li class="flex-elements">
+              <a href="" class="card">
+                <img
+                  src="./images/imgsecond-2.jpg"
+                  alt="Постер"
+                  width="370"
+                  height="294"
+              /></a>
+              <div class="flex">
+                <h2 class="title-card">Постер New Orlean vs Golden Star</h2>
+                <p class="text-card">Дизайн</p>
+              </div>
+            </li>
+            <li class="flex-elements">
+              <a href="" class="card"
+                ><img
+                  src="./images/imgthird-2.jpg"
+                  alt="Ресторан"
+                  width="370"
+                  height="294"
+              /></a>
+              <div class="flex">
+                <h2 class="title-card">Ресторан Seafood</h2>
+                <p class="text-card">Приложение</p>
+              </div>
+            </li>
+            <li class="flex-elements">
+              <a href="" class="card"
+                ><img
+                  src="./images/img(3)-2.jpg"
+                  alt="Проект Прайм"
+                  width="370"
+                  height="294"
+              /></a>
+              <div class="flex">
+                <h2 class="title-card">Проект Prime</h2>
+                <p class="text-card">Маркетинг</p>
+              </div>
+            </li>
+            <li class="flex-elements">
+              <a href="" class="card"
+                ><img
+                  src="./images/img(4)-2.jpg"
+                  alt="Проект Бокс"
+                  width="370"
+                  height="294"
+              /></a>
+              <div class="flex">
+                <h2 class="title-card">Проект Boxes</h2>
+                <p class="text-card">Приложение</p>
+              </div>
+            </li>
+            <li class="flex-elements">
+              <a href="" class="card">
+                <img
+                  src="./images/img(5)-2.jpg"
+                  alt="Вдохоновение"
+                  width="370"
+                  height="294"
+              /></a>
+              <div class="flex">
+                <h2 class="title-card">Inspiration has no Borders</h2>
+                <p class="text-card">Веб-сайт</p>
+              </div>
+            </li>
+            <li class="flex-elements">
+              <a href="" class="card">
+                <img
+                  src="./images/img(6)-2.jpg"
+                  alt="Издание"
+                  width="370"
+                  height="294"
+              /></a>
+              <div class="flex">
+                <h2 class="title-card">Издание Limited Edition</h2>
+                <p class="text-card">Дизайн</p>
+              </div>
+            </li>
+            <li class="flex-elements">
+              <a href="" class="card">
+                <img
+                  src="./images/img(7)-2.jpg"
+                  alt="Проект Лаб"
+                  width="370"
+                  height="294"
+              /></a>
+              <div class="flex">
+                <h2 class="title-card">Проект LAB</h2>
+                <p class="text-card">Маркетинг</p>
+              </div>
+            </li>
+            <li class="flex-elements">
+              <a href="" class="card">
+                <img
+                  src="./images/img(8)-2.jpg"
+                  alt="Бизнес"
+                  width="370"
+                  height="294"
+              /></a>
+              <div class="flex">
+                <h2 class="title-card">Growing Business</h2>
+                <p class="text-card">Приложение</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
 
-      <footer class="site-footer">
-        <a href="/"><img src="./images/WebStudio.svg" alt="Logo" /></a>
+    <footer class="site-footer">
+      <div class="container">
+        <div class="logo-footer">
+          <a href="/" class="logo-first"
+            ><img src="./images/WebStudio.svg" alt="Logo"
+          /></a>
+        </div>
         <address class="info">
           <ul class="contact-info list">
             <li>
@@ -207,14 +205,14 @@
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="last">
               <a href="tel:+380961111111" class="information"
                 >+38 096 111 11 11</a
               >
             </li>
           </ul>
         </address>
-      </footer>
-    </div>
+      </div>
+    </footer>
   </body>
 </html>
